--- a/ProgramaAumentoSalarial/style.css
+++ b/ProgramaAumentoSalarial/style.css
@@ -9,7 +9,7 @@ img{
 }
 
 .image{
-    width: 30%;
+    width: 40%;
 }
 
 .container{
@@ -22,8 +22,59 @@ img{
 h1{
     text-transform: uppercase;
     font-weight: 800;
+    margin-bottom: 1%;
 }
 
 .campoSalarioAtual{
     display: flex;
+    justify-content: space-evenly;
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
+#inSalario{
+    width: 40%;
+}
+
+h2{
+    text-transform: uppercase;
+    font-size: 17px;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.radioSituacao{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 3%;
+}
+
+.botoes{
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+    justify-content: center;
+}
+
+.botao{
+ width: 40%;
+ background-color: #000;
+ padding: 1%;
+ color: #fff;
+ text-transform: uppercase;
+ cursor: pointer;
+ border: none;
+}
+
+.botao:hover{
+    background-color: #6da138;
+    color: #000;
+    font-weight: bold;
+}
+
+h3{
+    text-align: center;
+    margin-top: 3%;
 }
